--- a/tests/auto/language/CMakeLists.txt
+++ b/tests/auto/language/CMakeLists.txt
@@ -2,7 +2,7 @@ add_qbs_test(language
     DEFINES
         "QBS_VERSION=\"${QBS_VERSION}\""
     DEPENDS
-        Qt5::Script
+        qbsscriptengine
     SOURCES
         tst_language.cpp
         tst_language.h
